// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The Cookie Consent Component > the banner > is wired up correctly when false 1`] = `
<div
  aria-describedby="cookie-consent-text"
  aria-labelledby="cookie-consent-header"
  class="cookie-consent-container"
  role="dialog"
>
  <div
    class="cookie-consent-header"
    id="cookie-consent-header"
  >
    <div
      id="cookie-icon"
    />
    cookieConsent.title
  </div>
  <div
    class="cookie-consent-text"
    id="cookie-consent-text"
  >
    cookieConsent.disclaimer
  </div>
  <form
    action="/settings/cookie-consent"
    id="cookie-consent-form-accept"
    method="post"
  >
    <div
      class="cookie-consent-switches"
    >
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-necessary"
        >
          cookieConsent.label.necessary
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="necessary"
            type="hidden"
            value="true"
          />
          <input
            checked=""
            disabled=""
            id="cookie-consent-necessary"
            role="switch"
            tabindex="0"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-analytics"
        >
          cookieConsent.label.analytics
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="analytics"
            type="hidden"
            value="false"
          />
          <input
            id="cookie-consent-analytics"
            role="switch"
            tabindex="1"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-marketing"
        >
          cookieConsent.label.marketing
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="marketing"
            type="hidden"
            value="false"
          />
          <input
            disabled=""
            id="cookie-consent-marketing"
            role="switch"
            tabindex="0"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
    </div>
  </form>
  <form
    action="/settings/cookie-consent"
    id="cookie-consent-form-deny"
    method="post"
  >
    <input
      name="analytics"
      type="hidden"
      value="false"
    />
    <input
      name="marketing"
      type="hidden"
      value="false"
    />
  </form>
  <div
    class="cookie-consent-buttons"
  >
    <button
      form="cookie-consent-form-deny"
      tabindex="3"
      type="submit"
    >
      cookieConsent.deny
    </button>
    <button
      class="primary"
      form="cookie-consent-form-accept"
      tabindex="2"
      type="submit"
    >
      cookieConsent.accept
    </button>
  </div>
</div>
`;

exports[`The Cookie Consent Component > the banner > is wired up correctly when true 1`] = `
<div
  aria-describedby="cookie-consent-text"
  aria-labelledby="cookie-consent-header"
  class="cookie-consent-container"
  role="dialog"
>
  <div
    class="cookie-consent-header"
    id="cookie-consent-header"
  >
    <div
      id="cookie-icon"
    />
    cookieConsent.title
  </div>
  <div
    class="cookie-consent-text"
    id="cookie-consent-text"
  >
    cookieConsent.disclaimer
  </div>
  <form
    action="/settings/cookie-consent"
    id="cookie-consent-form-accept"
    method="post"
  >
    <div
      class="cookie-consent-switches"
    >
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-necessary"
        >
          cookieConsent.label.necessary
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="necessary"
            type="hidden"
            value="true"
          />
          <input
            checked=""
            disabled=""
            id="cookie-consent-necessary"
            role="switch"
            tabindex="0"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-analytics"
        >
          cookieConsent.label.analytics
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="analytics"
            type="hidden"
            value="true"
          />
          <input
            checked=""
            id="cookie-consent-analytics"
            role="switch"
            tabindex="1"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-marketing"
        >
          cookieConsent.label.marketing
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="marketing"
            type="hidden"
            value="false"
          />
          <input
            disabled=""
            id="cookie-consent-marketing"
            role="switch"
            tabindex="0"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
    </div>
  </form>
  <form
    action="/settings/cookie-consent"
    id="cookie-consent-form-deny"
    method="post"
  >
    <input
      name="analytics"
      type="hidden"
      value="false"
    />
    <input
      name="marketing"
      type="hidden"
      value="false"
    />
  </form>
  <div
    class="cookie-consent-buttons"
  >
    <button
      form="cookie-consent-form-deny"
      tabindex="3"
      type="submit"
    >
      cookieConsent.deny
    </button>
    <button
      class="primary"
      form="cookie-consent-form-accept"
      tabindex="2"
      type="submit"
    >
      cookieConsent.accept
    </button>
  </div>
</div>
`;

exports[`The Cookie Consent Component > the banner > is wired up correctly when undefined 1`] = `
<div
  aria-describedby="cookie-consent-text"
  aria-labelledby="cookie-consent-header"
  class="cookie-consent-container"
  role="dialog"
>
  <div
    class="cookie-consent-header"
    id="cookie-consent-header"
  >
    <div
      id="cookie-icon"
    />
    cookieConsent.title
  </div>
  <div
    class="cookie-consent-text"
    id="cookie-consent-text"
  >
    cookieConsent.disclaimer
  </div>
  <form
    action="/settings/cookie-consent"
    id="cookie-consent-form-accept"
    method="post"
  >
    <div
      class="cookie-consent-switches"
    >
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-necessary"
        >
          cookieConsent.label.necessary
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="necessary"
            type="hidden"
            value="true"
          />
          <input
            checked=""
            disabled=""
            id="cookie-consent-necessary"
            role="switch"
            tabindex="0"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-analytics"
        >
          cookieConsent.label.analytics
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="analytics"
            type="hidden"
            value="true"
          />
          <input
            checked=""
            id="cookie-consent-analytics"
            role="switch"
            tabindex="1"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
      <div
        class="cookie-consent-switch"
      >
        <label
          class="cookie-consent-title"
          for="cookie-consent-marketing"
        >
          cookieConsent.label.marketing
        </label>
        <label
          class="toggle-component cookie-consent-switch"
        >
          <input
            aria-hidden="true"
            name="marketing"
            type="hidden"
            value="false"
          />
          <input
            disabled=""
            id="cookie-consent-marketing"
            role="switch"
            tabindex="0"
            type="checkbox"
          />
          <span
            aria-hidden="true"
            class="slider"
          />
        </label>
      </div>
    </div>
  </form>
  <form
    action="/settings/cookie-consent"
    id="cookie-consent-form-deny"
    method="post"
  >
    <input
      name="analytics"
      type="hidden"
      value="false"
    />
    <input
      name="marketing"
      type="hidden"
      value="false"
    />
  </form>
  <div
    class="cookie-consent-buttons"
  >
    <button
      form="cookie-consent-form-deny"
      tabindex="3"
      type="submit"
    >
      cookieConsent.deny
    </button>
    <button
      class="primary"
      form="cookie-consent-form-accept"
      tabindex="2"
      type="submit"
    >
      cookieConsent.accept
    </button>
  </div>
</div>
`;

exports[`The Cookie Consent Component > the banner > renders the form 1`] = `
<DocumentFragment>
  <div
    aria-describedby="cookie-consent-text"
    aria-labelledby="cookie-consent-header"
    class="cookie-consent-container"
    role="dialog"
  >
    <div
      class="cookie-consent-header"
      id="cookie-consent-header"
    >
      <div
        id="cookie-icon"
      />
      cookieConsent.title
    </div>
    <div
      class="cookie-consent-text"
      id="cookie-consent-text"
    >
      cookieConsent.disclaimer
    </div>
    <form
      action="/settings/cookie-consent"
      id="cookie-consent-form-accept"
      method="post"
    >
      <div
        class="cookie-consent-switches"
      >
        <div
          class="cookie-consent-switch"
        >
          <label
            class="cookie-consent-title"
            for="cookie-consent-necessary"
          >
            cookieConsent.label.necessary
          </label>
          <label
            class="toggle-component cookie-consent-switch"
          >
            <input
              aria-hidden="true"
              name="necessary"
              type="hidden"
              value="true"
            />
            <input
              checked=""
              disabled=""
              id="cookie-consent-necessary"
              role="switch"
              tabindex="0"
              type="checkbox"
            />
            <span
              aria-hidden="true"
              class="slider"
            />
          </label>
        </div>
        <div
          class="cookie-consent-switch"
        >
          <label
            class="cookie-consent-title"
            for="cookie-consent-analytics"
          >
            cookieConsent.label.analytics
          </label>
          <label
            class="toggle-component cookie-consent-switch"
          >
            <input
              aria-hidden="true"
              name="analytics"
              type="hidden"
              value="true"
            />
            <input
              checked=""
              id="cookie-consent-analytics"
              role="switch"
              tabindex="1"
              type="checkbox"
            />
            <span
              aria-hidden="true"
              class="slider"
            />
          </label>
        </div>
        <div
          class="cookie-consent-switch"
        >
          <label
            class="cookie-consent-title"
            for="cookie-consent-marketing"
          >
            cookieConsent.label.marketing
          </label>
          <label
            class="toggle-component cookie-consent-switch"
          >
            <input
              aria-hidden="true"
              name="marketing"
              type="hidden"
              value="false"
            />
            <input
              disabled=""
              id="cookie-consent-marketing"
              role="switch"
              tabindex="0"
              type="checkbox"
            />
            <span
              aria-hidden="true"
              class="slider"
            />
          </label>
        </div>
      </div>
    </form>
    <form
      action="/settings/cookie-consent"
      id="cookie-consent-form-deny"
      method="post"
    >
      <input
        name="analytics"
        type="hidden"
        value="false"
      />
      <input
        name="marketing"
        type="hidden"
        value="false"
      />
    </form>
    <div
      class="cookie-consent-buttons"
    >
      <button
        form="cookie-consent-form-deny"
        tabindex="3"
        type="submit"
      >
        cookieConsent.deny
      </button>
      <button
        class="primary"
        form="cookie-consent-form-accept"
        tabindex="2"
        type="submit"
      >
        cookieConsent.accept
      </button>
    </div>
  </div>
</DocumentFragment>
`;
